--- a/forgot-password.html
+++ b/forgot-password.html
@@ -39,7 +39,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="logo">
-                                        <img src="Custom/img/logo.png" alt="Cafe Beans Logo">
+                                        <img src="custom/img/logo.png" alt="Cafe Beans Logo">
                                     </div>
                                         <h2 class="h4 text-gray-900 mb-2">Forgot Your Password?</h2>
                                         <p class="mb-4">We get it, stuff happens. Just enter your email address below <br>
