--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="logo">
-                                        <img src="Custom/img/logo.png" alt="Cafe Beans Logo">
+                                        <img src="custom/img/logo.png" alt="Cafe Beans Logo">
                                     </div>
                                     <h2 class="h4 text-gray-900 mb-4">Welcome to NAIK Coffee Shop!</h2>
                                     <form class="user">
