--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="logo">
-                                <img src="Custom/img/logo.png" alt="Cafe Beans Logo">
+                                <img src="custom/img/logo.png" alt="Cafe Beans Logo">
                             </div>
                                 <h2 class="h4 text-gray-900 mb-4">Create an account at NAIK Coffee Shop!</h2>
                             <form class="user">
